--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "@chakra-ui/react": "^2.5.5",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@harmoniclabs/koios-pluts": "^0.1.3-dev1",
-    "@harmoniclabs/plu-ts": "^0.3.1",
+    "@harmoniclabs/koios-pluts": "^0.1.5",
+    "@harmoniclabs/plu-ts": "^0.6.2",
     "@harmoniclabs/uint8array-utils": "^1.0.0",
-    "@meshsdk/core": "^1.5.2",
-    "@meshsdk/react": "^1.1.7",
+    "@meshsdk/core": "^1.5.11-beta.3",
+    "@meshsdk/react": "^1.1.9",
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
