--- a/package.json
+++ b/package.json
@@ -12,18 +12,19 @@
     "@chakra-ui/react": "^2.5.5",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@harmoniclabs/koios-pluts": "^0.1.5",
+    "@harmoniclabs/blockfrost-pluts": "^0.1.6",
+    "@harmoniclabs/crypto": "^0.1.0",
     "@harmoniclabs/plu-ts": "^0.6.2",
     "@harmoniclabs/uint8array-utils": "^1.0.0",
     "@meshsdk/core": "^1.5.11-beta.3",
-    "@meshsdk/react": "^1.1.9",
+    "@meshsdk/react": "^1.1.10-beta.3",
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "framer-motion": "^10.12.2",
-    "next": "13.3.0",
+    "next": "^13.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.4"
